--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <title>Homework 12</title>
   </head>
   <body>
-    <h1>goit-js-hw-12 fetchCountries</h1>
-    <input type="text" id="search-box" placeholder="Country" />
+    <h1>goit-js-hw-12 fetchCountries +(async/await)</h1>
+    <input type="text" id="search-box" placeholder="Country in English" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
 
