add AXIOS, and some css

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,14 @@
     <title>Homework 12</title>
   </head>
   <body>
-    <h1>goit-js-hw-12 fetchCountries +(async/await)</h1>
+    <h1 class="title">goit-js-hw-12 "fetchCountries"</h1>
+
     <input type="text" id="search-box" placeholder="Country in English" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
+
+    <h2 class="title">+(async/await)</h2>
+    <h3 class="title">+ axios</h3>
 
     <script src="index.js"></script>
   </body>
